fix forecast-details layOut issues

--- a/style.css
+++ b/style.css
@@ -8,16 +8,14 @@ html{
     box-sizing: inherit;
   }
 body{
-    background-size: 100%;
+    background-size: contain;
     background-image: -webkit-linear-gradient(top, #3b6bee, #3EB9E6);
     background-image: -moz-linear-gradient(top, #3b6bee, #3EB9E6);
     background-image: linear-gradient(to bottom, #3b6bee, #3EB9E6);
     font-family: 'Raleway';
-    
 }
 /* Assets */
 .outer_container{
-    /* display: flex; */
     padding: 4em 12em;
 }
 /* form */
@@ -71,19 +69,15 @@ body{
     display: flex;
     justify-content: space-between;
     color: #fff;
-    margin: 4em 0;
+    margin: 2em 0em 5em 0em;
     text-align: center;
 }
 .current_icon{
     width: 4em;
-    /* display: inline-block; */
 }
 
 /* forecast======= */
-.forecast{
-    width: 75%;
-    padding: 1em;
-}
+
 .forecast_header{
     display: flex;
     justify-content: space-between;
@@ -99,12 +93,19 @@ body{
 .forecast_hourly{
     display: flex;
     justify-content: space-around;
+    margin-bottom: 3em;
 }
 .hourly{
     padding: .5em;
     border: 1px solid red;
 }
-
+.forecast_title ,
+.forecast_main{
+    color: #fff;
+    font-size: 1.2em;
+    margin-left: .5em;
+    margin-bottom: .7em;
+}
 
 
 
@@ -116,16 +117,18 @@ body{
 
 .daily_items{
     margin: 0 .5em;
-    background-color: #d3cfcf;
+    background-color: #e2e2e2;
     padding: 1em;
     border-radius: 5%;
+    text-align: center;
 }
 .hourly_items{
-    background-color: #d3cfcf;
+    background-color: #e2e2e2;
     margin: 0 .5em;
     padding: .5em;
     border-radius: 5%;
     font-size: 1em;
+    text-align: center;
 }
 .hourly_icon{
     width: 3em;
